k8s/user-service-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: user-service

spec:
  replicas: 3

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: user-service:3.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
