k8s/user-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-service-ingress

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api/v1/users
            pathType: Prefix

            backend:
              service:
                name: user-service
                port:
                  number: 8080
